# monorepo-conventional-commits

./: Cargo.toml  README.md  install.sh
plugin/: nvim-conventional-commits.vim
src/: lerna.rs  lib.rs  logger.rs  logging.rs  main.rs  prepare_commit_msg.rs
test_utilities/: Cargo.toml
test_utilities/src/: lib.rs
tests/: integration_test.rs  lerna_test.rs  simple_repo_test.rs
tests/common/: mod.rs
tests/fixtures/complex-lerna-monorepo/: lerna.json
tests/fixtures/complex-lerna-monorepo/apps/app1/sub-package/: package.json
tests/fixtures/complex-lerna-monorepo/apps/app3/: package.json
tests/fixtures/complex-lerna-monorepo/apps/scoped/: package.json
tests/fixtures/complex-lerna-monorepo/spikes/spike1/: package.json
